; ModuleID = '/home/carl/AnghaBench/xLua/build/luasocket/extr_udp.c_udp_open.c'
source_filename = "/home/carl/AnghaBench/xLua/build/luasocket/extr_udp.c_udp_open.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [15 x i8] c"udp{connected}\00", align 1
@udp_methods = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [17 x i8] c"udp{unconnected}\00", align 1
@.str.2 = private unnamed_addr constant [9 x i8] c"udp{any}\00", align 1
@.str.3 = private unnamed_addr constant [13 x i8] c"select{able}\00", align 1
@func = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @udp_open(i32* %0) #0 {
  %2 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %3 = load i32*, i32** %2, align 8
  %4 = load i32, i32* @udp_methods, align 4
  %5 = call i32 @auxiliar_newclass(i32* %3, i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str, i64 0, i64 0), i32 %4)
  %6 = load i32*, i32** %2, align 8
  %7 = load i32, i32* @udp_methods, align 4
  %8 = call i32 @auxiliar_newclass(i32* %6, i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str.1, i64 0, i64 0), i32 %7)
  %9 = load i32*, i32** %2, align 8
  %10 = call i32 @auxiliar_add2group(i32* %9, i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str, i64 0, i64 0), i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.2, i64 0, i64 0))
  %11 = load i32*, i32** %2, align 8
  %12 = call i32 @auxiliar_add2group(i32* %11, i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str.1, i64 0, i64 0), i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.2, i64 0, i64 0))
  %13 = load i32*, i32** %2, align 8
  %14 = call i32 @auxiliar_add2group(i32* %13, i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str, i64 0, i64 0), i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.3, i64 0, i64 0))
  %15 = load i32*, i32** %2, align 8
  %16 = call i32 @auxiliar_add2group(i32* %15, i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str.1, i64 0, i64 0), i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.3, i64 0, i64 0))
  %17 = load i32*, i32** %2, align 8
  %18 = load i32, i32* @func, align 4
  %19 = call i32 @luaL_openlib(i32* %17, i32* null, i32 %18, i32 0)
  ret i32 0
}

declare dso_local i32 @auxiliar_newclass(i32*, i8*, i32) #1

declare dso_local i32 @auxiliar_add2group(i32*, i8*, i8*) #1

declare dso_local i32 @luaL_openlib(i32*, i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
